chore: update package name and description

--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,16 @@
 {
-    "name": "onramplab/composer-package-template",
-    "description": "An composer template",
+    "name": "onramplab/php-twilio-enhancement",
+    "description": "enhancement for PHP twilio sdk",
     "type": "library",
     "license": "MIT",
     "keywords": [
-        "template",
-        "composer",
-        "package",
-        "skeleton",
-        "boilerplate",
-        "composer template",
-        "package template",
-        "composer package template"
+        "twilio",
+        "php",
+        "enhancement"
     ],
     "authors": [
         {
-            "name": "Onramplab",
+            "name": "Onramp Lab",
             "email": "dev@onramplab.com"
         }
     ],
@@ -38,7 +33,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Onramplab\\ComposerPackageTemplate\\": "src/"
+            "Onramplab\\TwilioEnhancement\\": "src/"
         }
     },
     "extra": {
