--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "twilio/sdk": "^6.42.1"
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
